--- a/server/webjs/spots.css
+++ b/server/webjs/spots.css
@@ -1,7 +1,10 @@
 html, body {
     height: 100%;
+    width: 100%;
+    position: relative;
     margin: 0;
     font-family: arial;
+
 }
 
 body {
@@ -22,24 +25,18 @@ h2 {
     max-height: 100%;*/
 }
 #toolbar {
-    height: 26px;
+    height: 36px;
     display: flex;
     align-items: center;
     width: 100%;
-}
-
-#toolbar .button {
-    height: 24px;
-    border: 1px solid gray;
-    cursor: pointer;
+    background-color: #444;
+    color: #eee;
 }
 
 #toolbar .title {
     flex-grow: 1;
-    font-size: 18pt;
+    font-size: 16pt;
     font-weight: bold;
-
-    color: #666;
 }
 
 #toolbar .button {
@@ -47,10 +44,51 @@ h2 {
     line-height: 24px;
     padding-left: 5px;
     padding-right: 5px;
-    border: 1px solid #ccc;
-    background-color: #eee;
+    /*border: 1px solid #ccc;*/
+    /*background-color: #eee; */
+    cursor: pointer;
 }
 
-#loginForm {
-    width: 400px;
+#toolbar #user-info {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+/****************************************** modal window ********** */
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
